src/objects/QPMS__Complaint_Defect_Complaint_GT_Junction__c.object
<CustomObject>
    <description>This is junction object. It stores complaint defect and complaint general task junction records.</description>
    <fields>
        <fullName>QPMS__Category__c</fullName>
        <description>This field is used to store Complaint Defect Category values</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>val1</fullName>
                </value>
                <value>
                    <fullName>val2</fullName>
                </value>
                <value>
                    <fullName>val3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save complaint Defect value</description>
        <label>Evaluation Code</label>
        <referenceTo>QPMS__Complaint_Defect__c</referenceTo>
        <relationshipLabel>Complaint Defect Complaint GT Junctions</relationshipLabel>
        <relationshipName>Complaint_Defect_Complaint_GT_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save complaint General task value</description>
        <label>Complaint General Task</label>
        <referenceTo>QPMS__Complaint_General_Task__c</referenceTo>
        <relationshipLabel>Complaint Defect Complaint GT Junctions</relationshipLabel>
        <relationshipName>Complaint_Defect_Complaint_GT_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <formula>QPMS__Complaint_General_Task__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <type>Text</type>
    </fields>
    <label>Complaint Defect Complaint GT Junction</label>
    <nameField>
        <displayFormat>CGT-{00000}</displayFormat>
        <label>Complaint Defect Complaint GT Junction N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaint Defect Complaint GT Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>